# Evaluation-of-Culturally-Adapted-Text

./: PROJECT_REPORT.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements.txt
configs/: cultures_india.json  eval_rubric.yaml
data/benchmark/: benchmark_120.jsonl
eval/: human_eval_blinded_ab.csv  human_eval_filled_by_ai.csv  human_eval_rubric.md  human_eval_sheet_template.csv  human_eval_simulated_metric_aligned.csv  human_eval_simulated_metric_summary.csv  human_eval_simulated_raters.csv  human_eval_simulated_summary.csv  human_eval_ui_template.html
notebooks/: final_ablation_results.ipynb  paper_style_results.ipynb
outputs/demo/: adaptations.jsonl  metrics.csv  summary.json
outputs/eecc_external_run/: adaptations.jsonl  metrics.csv  summary.json
outputs/final_ablation_llm/: ablation_metrics_all.csv  ablation_pairwise_composite.csv  ablation_report.json  ablation_summary.csv  adaptations_identity_baseline.jsonl  adaptations_lexical_swap_baseline.jsonl  adaptations_llm_adaptation.jsonl
prompts/: adaptation_prompt.txt
scripts/: demo.py  generate_benchmark_dataset.py  generate_result_figures.py  prepare_eecc_story_subset.py  prepare_external_dataset.py  prepare_human_eval_pack.py  run_ablation.py  run_pipeline.py
src/cultadapt/: __init__.py  adapter.py  culture_registry.py  datasets.py  eval_metrics.py  llm_client.py  llm_judge.py  pipeline.py  prompts.py  types.py
src/cultadapt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_llm_client.py  test_metrics.py
